[package]
name = "usher-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
